Add stylings to the leaderboard site

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://fonts.cdnfonts.com/css/apercu" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <title>Leaderboard</title>
 </head>
 <body>
@@ -15,7 +17,7 @@
     <section class="scores">
         <div class="bghead">
             <h2>Recent scores</h2>
-            <input type="button" value="Refresh" id="btn-refresh">
+            <button type="button"  id="btn-refresh"><i class="fa-solid fa-arrow-rotate-right"></i>Refresh </button>
         </div>
         
         <div class="bdList">
